--- a/config/alaska.toml
+++ b/config/alaska.toml
@@ -1,11 +1,11 @@
-[[Location]]
-name =Alaska
-population =728300
+[Location]
+name = "Alaska"
+population = 728300
 age = 33.4
 householdIncome = 69860
-party = tabs
+party = "tabs"
 
-[[Location.racialBreakdown]]
+[Location.racialBreakdown]
 blue = 62.90
 green = 3.30
 purple = 6.20
